<resources>
    <string name="action_settings">Settings</string>
    <string name="section_format">Time 0%1$d</string>
    <string name="new_pelada">Nova pelada</string>
    <string name="txt_nome">Nome:</string>
    <string name="txt_local">Local:</string>
    <string name="txt_hora">Hora:</string>
    <string name="txt_quant">Quantidade:</string>
    <string name="txt_nivel">Nível:</string>
    <string name="txt_posicao">Posição:</string>
    <string name="txt_sortear">Sortear</string>
    <string name="txt_craque">Craque:</string>
    <string name="txt_pereba">Pereba:</string>
    <string name="txt_artilheiro">Artilheiro:</string>
    <string name="txt_paredao">Paredão:</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_novoJogador">Novo Jogador</string>
    <string name="title_activity_novaPelada">Nova Pelada</string>
    <string name="action_logout">Sair</string>
    <string name="action_refresh">Atualizar</string>
</resources>
